--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@walletconnect/universal-provider": "^2.14.0",
-    "@walletconnect/types": "^2.14.0",
-    "@solana/web3.js": "^1.87.6",
-    "@solana/wallet-adapter-wallets": "^0.19.32",
-    "@solana/wallet-adapter-base": "^0.9.23"
+    "@solana/web3.js": "^1.87.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
